// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Test: Text 1`] = `
<div>
  <a
    class="css-zkrtb7-Text"
  >
    I am a string
  </a>
</div>
`;

exports[`Snapshot Test: Text 2`] = `
<div>
  <p
    class="css-1aktc3o-Text"
  >
    I am a string
  </p>
</div>
`;
